--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Plugin::Unicode
 
+0.3  Tue Jun 5 16:35:00 2007
+        - Change to Module::Install
+
 0.2  Sat Apr 30 23:08:00 2005
         - Only encode body if it is utf8.
 
