Import of MRAMBERG/Catalyst-Plugin-Unicode-0.4.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Plugin-Unicode
gitpan-cpan-version:      0.4
gitpan-cpan-path:         MRAMBERG/Catalyst-Plugin-Unicode-0.4.tar.gz
gitpan-cpan-author:       MRAMBERG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Plugin::Unicode
 
+0.4  Tue Jul 18 18:21:00 2007
+	- Fix release fuckup
+
 0.3  Tue Jun 5 16:35:00 2007
         - Change to Module::Install
 
