--- a/Changes
+++ b/Changes
@@ -1,7 +1,12 @@
 Revision history for Perl extension Catalyst::Plugin::Unicode
 
+0.92 Sun Oct  4 18:30:00 GMT 2009
+        - Add documentation note that you probably want to use
+          Catalyst::Plugin::Unicode::Encoding
+
 0.91 Sat Apr 18 23:47:00 GMT 2009
         - Fix manifest failure
+
 0.9  Sat Apr 18 11:47:00 GMT 2009
         - Makefile.PL: build_requires => test_requires (RT #37960)
         - Switch to MRO::Compat
